Adjusted category-list height on android to ensure all categories are visible.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -285,7 +285,7 @@ ion-tabs{
   }
   .category-list{ //Search category drop down
     top: 58px;
-    height: calc(100vh - 58px);
+    height: calc(100vh - 98px);
   }
 }
 
